016_AWS_EKS/AWS_EKS/geo-ingress-dep.yml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: geography-ingress
  spec:
    ingressClassName: nginx
    rules:
      - http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: geography-server
                  port:
                    number: 4000
